# mimic

./: .dockerignore  .envrc  .gitignore  CLEANUP_SYSTEM_DESIGN.md  Dockerfile  LLM.md  Makefile  README.md  mcp.json  pyproject.toml  test.md
.github/workflows/: build.yml
scenarios/: README.md  hackers-app.yaml  hackers-organized.yaml  minimal-demo.yaml  param-demo.yaml  scenario-with-required-properties.yaml
scripts/: bump-version.py  cleanup_old_components.py  generate-version.py  get-version.py  post-commit  pre-commit
src/: auth.py  cleanup.py  config.py  creation_pipeline.py  database.py  exceptions.py  gh.py  main.py  mcp_http.py  mcp_main.py  mcp_server.py  progress_tracker.py  run.py  scenario_service.py  scenarios.py  scheduler.py  security.py  unify.py
src/mimic/: __init__.py  __main__.py  cleanup_manager.py  cli.py  config_manager.py  creation_pipeline.py  environments.py  exceptions.py  gh.py  input_helpers.py  instance_repository.py  keyring_health.py  mcp.py  models.py  paths.py  platform.py  scenario_pack_manager.py  scenarios.py  settings.py  state_tracker.py  tui.py  unify.py  utils.py  version.json
src/mimic/cli/: __init__.py  cleanup.py  config.py  display.py  env.py  list_cmd.py  main.py  run_cmd.py  scenario_pack.py  setup_cmd.py  tenant.py  ui_cmd.py  upgrade_cmd.py
src/mimic/cli/run_helpers/: __init__.py  cleanup_helpers.py  execution.py  github_integration_check.py  parameter_handler.py  preview.py  prompts.py  property_preflight.py  validation.py
src/mimic/pipeline/: __init__.py  creation_pipeline.py  repository_manager.py  resource_manager.py  retry_handler.py
src/mimic/web/: __init__.py  dependencies.py  error_handler.py  events.py  middleware.py  models.py  server.py
src/mimic/web/api/: __init__.py  cleanup.py  config.py  environments.py  packs.py  scenarios.py  setup.py  tenants.py  version.py
src/mimic/web/static/: index.html
src/mimic/web/static/assets/: index-09kaMjqc.js  index-3Pd7aYhX.js  index-7olVFSD_.js  index-BP1bedBd.js  index-BT6TH-1I.js  index-Bl9Tz7bm.js  index-BnpnKgDZ.js  index-BsxA2ZBZ.js  index-C0OGhMG-.js  index-CAB8PTzi.js  index-COIEQm-Y.js  index-CUXOo1wK.js  index-CtA2XjSw.js  index-Cu0VhQTs.js  index-CzJp6w-2.js  index-D5VnRWHT.js  index-D5aBY8NR.js  index-DRhlQqu4.js  index-DTXpH7d8.js  index-DngKfx2m.js  index-Dr6ZLUEn.js  index-FUH19zVF.js  index-VwJYSVnW.js  index-_sYkZ3NK.js  index-fjbbymbc.js
static/: auth-component.js  cleanup-dashboard.js  dropdown-selector.js  progress-tracker.js  script.js  style.css  tab-navigation.js
templates/: base.html  index.html
terraform/: main.tf  startup-script.sh  terraform.tfvars  variables.tf
tests/: conftest.py  test_auth.py  test_cleanup.py  test_cleanup_api.py  test_cleanup_manager.py  test_cli_setup.py  test_config_manager.py  test_credential_validation.py  test_database.py  test_gh.py  test_github_integration_check.py  test_input_helpers.py  test_instance_repository.py  test_main.py  test_mcp.py  test_mcp_integration.py  test_models.py  test_platform.py  test_scenario_loading_integration.py  test_scenario_pack_manager.py  test_scenarios.py  test_security.py  test_state_tracker.py
web-ui/: index.html  package-lock.json  package.json  vite.config.ts
web-ui/src/: App.tsx
web-ui/src/api/: client.ts  sse.ts
web-ui/src/api/endpoints/: cleanup.ts  config.ts  environments.ts  index.ts  packs.ts  scenarios.ts  setup.ts  tenants.ts  version.ts
web-ui/src/components/: AddPresetEnvironmentDialog.tsx  AddPresetTenantDialog.tsx  BranchPRSelector.tsx  CredentialValidationStatus.tsx  EnvironmentSwitcher.tsx  ErrorAlert.tsx  ErrorBoundary.tsx  Layout.tsx  ParameterForm.tsx  PreviewDialog.tsx  ProgressDisplay.tsx  PropertyCheckDialog.tsx  ResourceList.tsx  TenantSwitcher.tsx  UpdateBanner.tsx
web-ui/src/hooks/: useProgress.ts  useUpdateCheck.ts
web-ui/src/pages/: CleanupPage.tsx  ConfigPage.tsx  DashboardPage.tsx  EnvironmentsPage.tsx  PacksPage.tsx  RunScenarioPage.tsx  ScenariosPage.tsx  SetupPage.tsx  TenantsPage.tsx
web-ui/src/store/: appStore.ts
web-ui/src/types/: api.ts
web-ui/src/utils/: errorUtils.ts
