[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mimic"
version = "2025.11.5.1"
description = "CloudBees Unify scenario instantiation CLI tool"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.119.1",
    "fastmcp>=0.3.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "keyring>=25.6.0",
    "prompt-toolkit>=3.0.48",
    "pydantic>=2.11.7",
    "pygithub>=2.7.0",
    "pyyaml>=6.0.2",
    "questionary>=2.1.1",
    "rich>=14.1.0",
    "sse-starlette>=3.0.2",
    "typer>=0.19.2",
    "uvicorn[standard]>=0.37.0",
]

[project.scripts]
mimic = "mimic.cli:app"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pyright>=1.1.404",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.ruff]
target-version = "py311"
line-length = 88
fix = true
exclude = ["unify_client"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long (handled by formatter)
    "B008", # do not perform function calls in argument defaults
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pyright]
exclude = ["unify_client"]
typeCheckingMode = "standard"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/mimic"]
